1999-07-9  Michael Hanni  <mhanni@sprintmail.com>

	* Headers/AppKit/NSTabViewItem.h: defined some non-spec methods.
	* Source/NSTabView.m: added event code. you can now select tabs.
	Not perfect yet, but it works (i.e. click around the text.) Also
	fixed image problem with left most tab being selected.
	* Source/NSTabViewItem.m: cache tabrect for quick retrieval.
	* Source/NSMenuView.m: removed an extra call to flushwindow.

Fri Jul  9  9:33:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSApplication.h: Removed delegate methods from
	NSApplication, and put them in a protocol instead.  Removed obsolete
	backend method.
	* Source/NSApplication.m: Removed delegate methods.  Removed code
	that intercepted the right mouse button.
	* Source/NSResponder.m: Added code so that the last responder will
	pop-up the main menu if NSRightMouseDown has not been handled.

Tue Jul  6 21:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSGraphicsContext.h: Added new method to perform
	window ordering.
	* Source/NSGraphicsContext.m: Dummy implementation of
	(_orderWindow:relativeTo:forWindow:])
	* Source/NSWindow.m: Use new method to implement all window
	ordering methods.
	* Model/GMAppKit.m: Remove calls to ([NSWindow -setLevel:]) as these
	have the unwaanted side-effect of ordering the window in to display.

Tue Jul  6 16:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenuView.m: In ([-trackWithEvent:]) fixed indexing bug
	when mouse dragged off bottom of menu and released, also
	reformatted to GNU coding style. Added copyright notice.
	* Source/NSMenu.m: Added copyright notice.
	* Source/NSMenuItemCell.m: Added copyright notice.

Tue Jul  6 14:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSAffineTransform.h: Removed macros
	* Source/NSAffineTransform.m: Added macros

Tue Jul  6 13:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
