@@ -1,5 +1,11 @@
 1999-07-9  Michael Hanni  <mhanni@sprintmail.com>
 
+	* Source/NSTabView.m: perfected the mouse event work. now clicking
+	in the tabs works wonderfully. Now just need to hook up code to
+	draw the selected tabs view in the tabview rect.
+
+1999-07-9  Michael Hanni  <mhanni@sprintmail.com>
+
 	* Headers/AppKit/NSTabViewItem.h: defined some non-spec methods.
 	* Source/NSTabView.m: added event code. you can now select tabs.
 	Not perfect yet, but it works (i.e. click around the text.) Also
